--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,23 @@
       </tbody>
     </table>
     
-    <script src="js/chat.js"></script>
+  <script src="js/chat.js">
+      // TODO: Replace YOUR_SPACE and YOUR_CHATFLOW_ID with your own values below
+      async function query(data) {
+        const response = await fetch(
+          "https://flowise-production-62dc.up.railway.app/api/v1/prediction/507d7164-1416-4ebb-85c8-605d7c6ba3bb",
+          {
+              method: "POST",
+              headers: {
+                  "Content-Type": "application/json"
+              },
+              body: JSON.stringify(data)
+          }
+      );
+      const result = await response.json();
+      return result;
+    }
+  </script>
   </main>
   <footer>
     &copy; 2025 Singapling. Not a real telco. <br> Made for Gen Z.
